@@ -1,9 +1,7 @@
 AUX cgconfig.init 196 RMD160 482cfdc8c1c68764c3bcf9c569d0432f502d443f SHA1 5d7c64d6f5ec55d6576d3b53ba2629c86d5cb0d7 SHA256 a63137aaec753302a71f43a0c08845a150488c368dc1a8d0fde3db4f82311ef5
-AUX cgred 550 RMD160 43dfe7be802944490a65a6d7cbac34b905202b96 SHA1 8299879d57682db9e627573f67bff04cdc11c6dd SHA256 ad5c20c9d8d298d107260d433e950882de5fb8f1d9300a70603bd36be4b57489
 AUX cgred.confd 758 RMD160 9dc8ca06d56077034a2fd5cf7efea50b40ef6f07 SHA1 7b1d8bf5fe2961aecfcb18ecce9bfb30a944beed SHA256 1a9d604f1f6610f510f07ec821c1e42ad13624d89fd77162ce6a3cce567ad8ec
-AUX cgred.init 550 RMD160 43dfe7be802944490a65a6d7cbac34b905202b96 SHA1 8299879d57682db9e627573f67bff04cdc11c6dd SHA256 ad5c20c9d8d298d107260d433e950882de5fb8f1d9300a70603bd36be4b57489
+AUX cgred.init 583 RMD160 52007056161ff0f2538b55411ca6271ca2b15a35 SHA1 bab4d55846322adfb0fed5fc7a5f499ffe34d7d4 SHA256 f922eb6c75ba903528733b9bd5b7bc866ae6ec1f8250db75083cfdad6bcbded4
 DIST libcgroup-0.34.tar.bz2 353532 RMD160 d04e23eeacbc3f26be6d110b78c69b5c97f3d576 SHA1 acf90b41d67826e76e397a0129aa83faa21c8483 SHA256 24950ae8e22aab0e1ae11d28f903dbfef1b17ee4f936e99a04bf5e6551caece3
-EBUILD libcgroup-0.34-r1.ebuild 1431 RMD160 e9b515451467e028e885cde9c4bc653f7be6e88f SHA1 b21b8249290301476803f1a20776420361dfc095 SHA256 36d1bdf436729c4a9e2a29c38e13360324d02bf8b5cc7754610a54cf80b6fbdb
-EBUILD libcgroup-0.34.ebuild 1145 RMD160 cb4e1bb37f0a0d90ce0c67678d52ed846764d77e SHA1 17e6928c3e361ce726f881541bb368d36e99b766 SHA256 e9b8051dec54c0345d1d1e1362905b8d4549ab97da61767321ddf7d32ec105cb
-MISC ChangeLog 413 RMD160 e588b2162944d0fd8607a171821bb716ebdac7c6 SHA1 72284d8aa476b4bd68467a9d8594c4489db65105 SHA256 0e8012a488519d8204d6560962c710a2f380b886f4de5ad437b94334be53573a
+EBUILD libcgroup-0.34-r1.ebuild 1432 RMD160 2093a4ad66c7692dc09c86c1c44b135335e3ef96 SHA1 d3a86d3d1c2c347af308f7a0e9b1fb8bd2ee3909 SHA256 827b5ea79707ebf167e22874c1b3bd03b1fc822be5f3e611068a38d3b9fab847
+MISC ChangeLog 543 RMD160 11996f39038296360f0df398cd3f509ab177f700 SHA1 441d8013df9062eacb0d0b7b3921bf0e99f01c22 SHA256 a7c35d009a15c4590395feeb9f5b74b0f52ee2197c3d5798a5ccf2e14662bc24
 MISC metadata.xml 588 RMD160 f842fd0b45896402da1ecf1e7cf46dda25b2c7ae SHA1 59391e0aafb7f7721534dbca8ef340b8334e3277 SHA256 9a84c6ce22f18eac29c16b21e4222ab6c2760f54bb60226a65510ee1ed319289
