@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 Jan 2010; <slep@gentoo.org> libcgroup-0.34-r1.ebuild, -files/cgred,
+  +files/cgred.init, -files/cgred.initd:
+  fix mistakes
+
   26 Jan 2010; <slep@gentoo.org> +libcgroup-0.34-r1.ebuild,
   +files/cgconfig.init, +files/cgred.confd, +files/cgred.init, metadata.xml:
   bump ebuild add daemon
